; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_gf128.c_cf_gf128_mul.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_gf128.c_cf_gf128_mul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cf_gf128_mul(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @memset(i32* %12, i32 0, i32 8)
  %14 = load i32*, i32** %8, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @memcpy(i32* %14, i32* %15, i32 8)
  store i32 0, i32* %9, align 4
  br label %17

17:                                               ; preds = %43, %3
  %18 = load i32, i32* %9, align 4
  %19 = icmp slt i32 %18, 128
  br i1 %19, label %20, label %46

20:                                               ; preds = %17
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* %9, align 4
  %23 = ashr i32 %22, 5
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %21, i64 %24
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %10, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %9, align 4
  %29 = and i32 %28, 31
  %30 = sub nsw i32 31, %29
  %31 = ashr i32 %27, %30
  %32 = and i32 %31, 1
  store i32 %32, i32* %11, align 4
  %33 = load i32, i32* %11, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %20
  %36 = load i32*, i32** %7, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = call i32 @xor_words(i32* %36, i32* %37, i32 4)
  br label %39

39:                                               ; preds = %35, %20
  %40 = load i32*, i32** %8, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @cf_gf128_double_le(i32* %40, i32* %41)
  br label %43

43:                                               ; preds = %39
  %44 = load i32, i32* %9, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %9, align 4
  br label %17

46:                                               ; preds = %17
  %47 = load i32*, i32** %6, align 8
  %48 = load i32*, i32** %7, align 8
  %49 = call i32 @memcpy(i32* %47, i32* %48, i32 8)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @xor_words(i32*, i32*, i32) #1

declare dso_local i32 @cf_gf128_double_le(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
